[Manny]Completed directive management

--- a/Exhibition.Portal.Web/src/app/components/sidebar/sidebar.component.html
+++ b/Exhibition.Portal.Web/src/app/components/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
         <div class="logo-img">
             <img src="/assets/img/angular2-logo-red.png"/>
         </div>
-        Creative Tim
+        配置系统
     </a>
 </div>
 <div class="sidebar-wrapper">
