--- a/Exhibition.Portal.Web/src/app/components/directive/directive.component.html
+++ b/Exhibition.Portal.Web/src/app/components/directive/directive.component.html
@@ -9,34 +9,34 @@
     <div class="row">
         <div class="col-sm-6">
             <mat-form-field class="example-full-width">
-                <input matInput placeholder="指令名称" [(ngModel)]="current.name" value="{{current.name}}"  >
+                <input matInput placeholder="指令名称" [(ngModel)]="current.name" value="{{current.name}}"
+                    disabled="disabled">
             </mat-form-field>
         </div>
         <div class="col-sm-6">
-            <mat-form-field>
-                <mat-select [formControl]="dtypeCtrl" placeholder="指令类型" #dtypeSelect  [(ngModel)]="current.type">
-                    <mat-option *ngFor="let type of omDirectiveTypes " [value]="type.key">
-                        {{type.text}}
-                    </mat-option>
-                </mat-select>
+            <mat-form-field class="example-full-width">
+                <input matInput placeholder="指令说明" [(ngModel)]="current.description" value="{{current.description}}">
             </mat-form-field>
         </div>
     </div>
     <div class="row">
         <div class="col-sm-6">
             <mat-form-field>
-                <mat-select [formControl]="terminalCtrl" placeholder="目标计算机" #targetIpSelect  [(ngModel)]="current.termianlIp">
-                    <mat-option *ngFor="let om of omTerminals " [value]="om.key">
-                        {{om.text}}
+                <mat-select [formControl]="terminalCtrl" placeholder="设备" #singleTerminalSelect>
+                    <mat-option *ngFor="let terminal of terminals  " [value]="terminal">
+                        {{terminal.description}}
                     </mat-option>
                 </mat-select>
             </mat-form-field>
         </div>
         <div class="col-sm-6">
             <mat-form-field>
-                <mat-select [formControl]="windowCtrl" placeholder="指定窗口" #windowSelect  [(ngModel)]="current.windowId">
-                    <mat-option *ngFor="let window of omWindows " [value]="window.key">
-                      {{window.text}}
+                <mat-select [formControl]="windowCtrl" placeholder="选择默认窗口" #windowSelect>
+                    <mat-option *ngFor="let window of windows " [value]="window">
+                        {{window.id}} | {{window.location?.x}} *
+                        {{window.location?.y}} (x * y) |
+                        {{window.size?.width}}
+                        * {{window.size?.height}} (宽 * 高)
                     </mat-option>
                 </mat-select>
             </mat-form-field>
@@ -44,16 +44,16 @@
     </div>
     <div class="row">
         <div class="col-sm-12">
+
             <mat-form-field>
-                <mat-select [formControl]="resourceServerSideCtrl" placeholder="相关资源" #resourceSelect [(ngModel)]="current.resourceFullName">
-                    <!-- place ngx-mat-select-search inside mat-option to allow opening without initial selection -->
-                    <mat-option>
-                        <ngx-mat-select-search [formControl]="resourceServerSideFilteringCtrl" [searching]="searching">
-                        </ngx-mat-select-search>
-                    </mat-option>
-                    <mat-option *ngFor="let resource of omResources " [value]="resource.fullName">
-                       {{resource.text}}
-                    </mat-option>
+                <mat-select [formControl]="bankGroupsCtrl" placeholder="选择资源文件(特别提醒:一个指令只能包含一种类型的文件)" [(ngModel)]="current.resources"
+                     [multiple]="true" #multiSelect>
+                    <ngx-mat-select-search [formControl]="bankGroupsFilterCtrl"></ngx-mat-select-search>
+                    <mat-optgroup *ngFor="let group of filteredBankGroups | async" [label]="group.name">
+                        <mat-option *ngFor="let resource of group.items" [value]="resource">
+                            {{resource.name}}
+                        </mat-option>
+                    </mat-optgroup>
                 </mat-select>
             </mat-form-field>
         </div>
