--- a/Exhibition.Portal.Web/src/app/directive/directive.component.html
+++ b/Exhibition.Portal.Web/src/app/directive/directive.component.html
@@ -10,10 +10,10 @@
                     <div class="card-body ">
                         <div class="inline-block">
                             <div class="dropdown">
-                                <button mat-raised-button (click)="OpenEdit({name:''})" class="btn btn-white  ">
+                                <!-- <button mat-raised-button (click)="OpenEdit({name:''})" class="btn btn-white  ">
                                     <i class="material-icons">home</i>
                                     新增指令
-                                </button>
+                                </button> -->
                             </div>
                             <div class="clearfix"></div>
                         </div>
