--- a/Exhibition.Portal.Web/src/app/components/media-terminal/MediaPlayerEdit.Component.html
+++ b/Exhibition.Portal.Web/src/app/components/media-terminal/MediaPlayerEdit.Component.html
@@ -10,13 +10,22 @@
     <div class="row">
         <div class="col-sm-6">
             <mat-form-field class="example-full-width">
-                <input type="text" matInput placeholder="设备名称" [(ngModel)]="current.name" value="{{current.name}}" disabled="disabled">
+                <input type="text" matInput placeholder="设备名称" [(ngModel)]="current.name" value="{{current.name}}"
+                    disabled="disabled">
             </mat-form-field>
         </div>
         <div class="col-sm-6">
             <mat-form-field class="example-full-width">
-                <input matInput value="{{GetTerminalTypeName(current.type)}}"  placeholder="设备类型"  disabled="disabled">
+                <input matInput value="{{GetTerminalTypeName(current.type)}}" placeholder="设备类型" disabled="disabled">
                 <input type="hidden" [(ngModel)]="current.type" />
+            </mat-form-field>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-12">
+            <mat-form-field class="example-full-width">
+                <input type="text" matInput placeholder="Endpoint" [(ngModel)]="current.settings.endpoint" value="{{current.settings.endpoint}}"
+                   >
             </mat-form-field>
         </div>
     </div>
@@ -25,8 +34,7 @@
     <div class="row" *ngFor="let window of current.settings.windows">
         <div class="col-sm-3">
             <mat-form-field class="example-full-width">
-                <input type="text" matInput placeholder="横坐标(X)" [(ngModel)]="window.location.x"
-                    value="{{window.location.x}}">
+                <input type="text" matInput placeholder="横坐标(X)" [(ngModel)]="window.location.x" value="{{window.location.x}}">
             </mat-form-field>
         </div>
         <div class="col-sm-3">
