--- a/Exhibition.Portal.Web/src/app/directive/directive.component.html
+++ b/Exhibition.Portal.Web/src/app/directive/directive.component.html
@@ -51,7 +51,10 @@
                                         <td class="td-actions text-left">
                                             <button mat-raised-button type="button" (click)="OpenEdit(directive)" matTooltip="编辑" [matTooltipPosition]="'above'" class="btn btn-primary btn-link btn-sm btn-just-icon">
                                                 <i class="material-icons">edit</i>
-                                            </button>                                        
+                                            </button>           
+                                            <button mat-raised-button type="button" (click)="Execute(directive)" matTooltip="执行" [matTooltipPosition]="'above'" class="btn btn-primary btn-link btn-sm btn-just-icon">
+                                                <i class="material-icons">favorite</i>
+                                            </button>                                
                                         </td>
                                     </tr>
                                 </tbody>
